--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,36 +1,43 @@
 ---
+import '@fontsource-variable/league-spartan'
+import Header from '../components/Header.astro'
+import Footer from '../components/Footer.astro'
+
 export interface Props {
-	title: string;
+	title: string
 }
 
-const { title } = Astro.props;
+const { title } = Astro.props
 ---
 
 <!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description">
+		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body>
+	<body class="grid gap-[10px] p-5">
+		<Header />
 		<slot />
+		<Footer />
 	</body>
 </html>
 <style is:global>
-	:root {
-		--accent: 124, 58, 237;
-		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
-	}
 	html {
-		font-family: system-ui, sans-serif;
-		background-color: #F6F6F6;
+		font-family: 'League Spartan Variable', sans-serif;
+		background-color: #ffffff;
 	}
-	code {
-		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-			Bitstream Vera Sans Mono, Courier New, monospace;
+
+	.grid-images > img:nth-child(n + 2):nth-child(-n + 4) {
+		grid-column: 3 / 5;
 	}
+
+	/*
+	.grid-images > img:nth-child(2n + 1) {
+		grid-column: 1 / span 2;
+	} */
 </style>
