🎨 style(Image.astro): add loading="lazy" attribute to improve page performance and add col-span-2 class to improve layout 🎨 style(Layout.astro): add animation to p and img elements and add media query to improve layout 🎨 style(index.astro): refactor image grid to display images in a 3xN grid and add alternating background color to improve layout and readability

--- a/src/components/Image.astro
+++ b/src/components/Image.astro
@@ -6,4 +6,9 @@ export interface Props {
 const { src } = Astro.props
 ---
 
-<img src={src} class="rounded-[5px] w-full object-cover h-[350px]" alt={src} />
+<img
+  src={`${src}`}
+  loading="lazy"
+  class="rounded-[5px] col-span-2 w-full object-cover h-[350px]"
+  alt={src}
+/>
