🎨 style(Image.astro): add animationDelay prop to Image component and use it to set data-animation-offset attribute for animation purposes

--- a/src/components/Image.astro
+++ b/src/components/Image.astro
@@ -1,14 +1,16 @@
 ---
 export interface Props {
   src: string
+  animationDelay: number
 }
 
-const { src } = Astro.props
+const { src, animationDelay } = Astro.props
 ---
 
 <img
   src={`${src}`}
   loading="lazy"
   class="rounded-[5px] col-span-2 w-full object-cover h-[350px]"
+  data-animation-offset={animationDelay}
   alt={src}
 />
