--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,4 @@
 ---
-// import Image from '../components/Image.astro'
 import Layout from '../layouts/Layout.astro'
 import Image from '../components/Image.astro'
 
@@ -15,7 +14,7 @@ for (let i = 0; i < imgRoutes.length; i += sizeArray) {
 <Layout title="Welcome to Astro.">
 	<main class="grid [&>*]:p-5 [&>*]:md:p-[100px]">
 		<header>
-			<p class="antialiased text-[32px] md:text-[50px] leading-[1.3]">
+			<p class="title antialiased text-[32px] md:text-[50px] leading-[1.3]">
 				Noel is a photographer & filmmmaker
 				<span class="md:block"> based in Amsterdam, The Netherlands.</span>
 			</p>
@@ -41,25 +40,27 @@ for (let i = 0; i < imgRoutes.length; i += sizeArray) {
 </Layout>
 
 <script>
-	console.log('asd')
-	const img = document.querySelectorAll('img')
+	const listImg = document.querySelectorAll('img')
 
-	const callback = (entries, observer) => {
-		console.log(entries)
-
+	const callback = (entries: IntersectionObserverEntry[]) => {
 		entries.forEach(entry => {
 			if (entry.isIntersecting) {
-				entry.target.style.animationDelay =
-					Number(entry.target.getAttribute('data-animation-offset') / 3) + 's'
+				;(entry.target as HTMLImageElement).style.animationDelay =
+					Number(entry.target.getAttribute('data-animation-offset')) / 8 +
+						's' || '2s'
 
 				entry.target.classList.add('fadeIn')
 			}
 		})
 	}
-	const options = {}
+	const options = {
+		root: null,
+		rootMargin: '0px 0px 0px 0px',
+		threshold: 0.25,
+	}
 
 	const myObserver = new IntersectionObserver(callback, options)
-	img.forEach(img => {
+	listImg.forEach(img => {
 		myObserver.observe(img)
 	})
 </script>
